Initial GitHub pages site with Jekyll

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,8 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
-	<a href="http://twitter.com/h01000110" target="_blank"><li><u>T</u>witter</li></a>
-	<a href="http://soundcloud.com/h01000110" target="_blank"><li><u>S</u>oundcloud</li></a>
+	<a href="https://twitter.com/solohack3r" target="_blank"><li><u>X</u></li></a>
+	<a href="https://www.youtube.com/channel/UC61aXxp0w3aGW2_xnUcn09g" target="_blank"><li><u>Y</u>ouTube</li></a>
+<a href="https://store.steampowered.com/developer/solohack3rstudios" target="_blank"><li><u>S</u>team</li></a>
+<a href="https://solohack3r.itch.io/" target="_blank"><li><u>i</u>tch.io</li></a>
+<a href="https://play.google.com/store/apps/dev?id=8898949224258005040" target="_blank"><li><u>G</u>oogle Play</li></a>
 </ul>
