Initial GitHub pages site with Jekyll

--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -2,6 +2,8 @@
 <hr>
 <br>
 <div class="donate">
-	<p>Do one of these games interest you?<br>
-	Purchase today on Steam or Google Play!</p>
+	<p>Do any of these games interest you?<br>
+	Purchase today on Steam or Google Play!</p><br><p>Want to get in touch? <a href= "mailto: solohack3rstudios@gmail.com"> 
+      Email us!
+   </a></p><br><p>Copyright © Solohack3r Studios</p>
 </div>
